--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "base64url": "^3.0.1",
     "core-js": "^3.6.5",
+    "crypto": "^1.0.1",
     "moment": "^2.24.0",
+    "randomstring": "^1.3.0",
     "sweetalert2": "^11.7.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
